<resources>
    <string name="app_name">ManagerAssistant</string>

    <string name="home">home</string>
    <string name="notifications">notifications</string>
    <string name="account">account</string>
    <string name="dashboard">dashboard</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_projects">show projects</string>
    <string name="show_tasks">show tasks</string>
    <string name="personal_board">personal board</string>
    <string name="title_activity_project">ProjectActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name_project">Name project</string>
    <string name="customer_project">Customer project</string>
    <string name="deadline_project">Deadline project</string>

</resources>