<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#344955"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="100dp"
            android:text="@string/personal_board"
            android:textSize="18sp"
            android:textColor="#F9AA10"
            android:layout_marginHorizontal="25dp"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/ic_person_board"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/projects_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:text="@string/show_projects"
            android:backgroundTint="#4A6572"
            android:layout_marginHorizontal="10dp"
            android:textColor="#F9AA33"
            android:drawableLeft="@drawable/ic_projects" />

        <Button
            android:id="@+id/tasks_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:text="@string/show_tasks"
            android:backgroundTint="#4A6572"
            android:layout_marginHorizontal="10dp"
            android:textColor="#F9AA33"
            android:drawableLeft="@drawable/ic_tasks"/>

        <Button
            android:id="@+id/employee_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:text="@string/show_tasks"
            android:backgroundTint="#4A6572"
            android:layout_marginHorizontal="10dp"
            android:textColor="#F9AA33"
            android:drawableLeft="@drawable/ic_employee"/>
    </LinearLayout>






</layout>